<resources>
    <string name="app_name">Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GameName">BlackJack</string>

    <string name="AcceptButton">Accept</string>
    <string name="InputName">Input Player Name</string>
    <string name="choseExistPlayer">Chose Exist</string>
    <string name="MoreButton">More</string>
    <string name="CheckButton">Check</string>
    <string name="Player1Field">PlayerField</string>
    <string name="ComputerField">Diller</string>
    <string name="refresh">Refresh</string>
    <string name="WinMassage">You Win</string>
    <string name="LoseMassage">You Lose</string>
    <string name="DrawnGame">Drawn Game</string>
    <string name="Save">Save</string>
</resources>
