<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorWhite"
             tools:context="com.example.test.RegisterBlank">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/GameName"
            android:textSize="16sp"/>
    <Button
            android:text="@string/AcceptButton"
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/AcceptButton"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/InputName"
            android:ems="10"
            android:id="@+id/PlayerNameInput" android:autofillHints=""/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choseExistPlayer"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="200dp"
            android:id="@+id/dbList"/>

</FrameLayout>