<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Player1Field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/computerField" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="148dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.106" android:id="@+id/playerField"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/moreButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp"
            android:layout_marginBottom="204dp" app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/MoreButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/playerField" app:layout_constraintVertical_bias="0.722"/>
    <Button
            android:text="@string/CheckButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkButton" app:layout_constraintStart_toEndOf="@+id/moreButton"
            android:layout_marginStart="56dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.357" android:layout_marginBottom="204dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/playerField" app:layout_constraintVertical_bias="0.722"/>
    <TextView
            android:text="@string/GameName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/computerField" android:layout_marginTop="144dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refreshBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/moreButton"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.139"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.811"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtn" app:layout_constraintEnd_toStartOf="@+id/refreshBtn"
            android:layout_marginEnd="88dp" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/moreButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.025"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.986" android:text="@string/Save"/>

</androidx.constraintlayout.widget.ConstraintLayout>
